force-app/main/default/objects/Case/fields/XDO_TTHAIR_Additional_Support__c.field-meta.xml
<CustomField>
    <fullName>XDO_TTHAIR_Additional_Support__c</fullName>
    <label>Additional Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Equipment</fullName>
            </value>
            <value>
                <fullName>Support for travelling with children</fullName>
            </value>
            <value>
                <fullName>Support for travelling with pet</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>