force-app/main/default/objects/Case/fields/xDO_TTHAIR_Medical_Equipment__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Medical_Equipment__c</fullName>
    <label>Medical Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stretcher</fullName>
            </value>
            <value>
                <fullName>Oxygen Tank</fullName>
            </value>
            <value>
                <fullName>Wheelchair</fullName>
            </value>
            <value>
                <fullName>Stretcher &amp; Oxygen Tank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>