force-app/main/default/objects/Case/fields/xDO_TTHAIR_Passenger__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Passenger__c</fullName>
    <label>Passenger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farah Binti Hassan</fullName>
            </value>
            <value>
                <fullName>Father: Mohammed Hassan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>