force-app/main/default/objects/Case/fields/xDO_TTHAIR_PNR__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_PNR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TTH PNR</label>
    <referenceTo>xDO_TTHAIR_PNR__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>