force-app/main/default/objects/Case/fields/xDO_TTHAIR_PNR_Name__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_PNR_Name__c</fullName>
    <formula>xDO_TTHAIR_PNR__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PNR Name</label>
    <type>Text</type>
</CustomField>